gitlab-ce/templates/gitlab-ce-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitlab-ce-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
      - "gitlab-ce.your_url.com"
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
      - "gitlab-ce.your_url.com"
      port:
        name: tcp
        number: 22
        protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-ce-vs
spec:
  hosts:
  - "*"
  gateways:
    - gitlab-ce-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: gitlab-ce
            port:
              number: 80
  tcp:
    - match:
      - port: 22
      route:
        - destination:
            host: gitlab-ce
            port:
              number: 22
